# volvocars-powertrain-build

./: .gitignore  .gitreview  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  flake.nix  pyproject_toml.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: build_cmd.md  design_standards.md  index.md  intro.md  model_changes.md  powertrain_build.md  powertrain_build_architecture.md  powertrain_build_deployment.md  powertrain_build_introduction.md  project_config.md  signal_consistency_in_check.md  signal_interface_tool.md  signaling_in_powertrain_build.md  todo_list.md  unit_config.md
docs/images/: powertrain_build-ECM.drawio  powertrain_build-hi.drawio
playbooks/: failing-job.yaml  nix-pre.yaml  nix.yaml  powertrain-build-blackduck-post.yaml  powertrain-build-blackduck-pre.yaml  powertrain-build-blackduck.yaml
powertrain_build/: a2l.py  build.py  build_proj_config.py  core.py  core_dummy.py  dids.py  dummy.py  ext_var.py  memory_section.py  signal_interfaces.py  utils.py  wrapper.py
powertrain_build/interface/: README.md  device_proxy.py  zone_controller.py
powertrain_build/zone_controller/: composition_yaml.py
pybuild/: build.py  build_proj_config.py  core.py  dids.py
pybuild/interface/: zone_controller.py
pybuild/zone_controller/: composition_yaml.py
roles/blackduck-run/: README.me
tests/: test_utils.py
tests/interface/: __init__.py  test_export_global_vars.py  test_generate_hi_interface.py  test_generation_utils.py  (+9 more)
zuul.d/: hello-nix.yaml  jobs.yaml  projects.yaml  release-jobs.yaml  secrets.yaml  tox.yaml
(+235 files in other folders)
