[metadata]
name = pt-pybuild
author = Henrik Wahlqvist
author-email = henrik.wahlqvist@volvocars.com
summary = A Continuous Integration (CI) build system testing all configurations where a TargetLink model is used.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Embedded Systems

[options]
include_package_data = True

[files]
packages =
    pybuild
    pybuild.interface
    pybuild.lib
    pybuild.zone_controller

[pbr]
skip_git_sdist = 1
